--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "semistandard -v | snazzy",
     "lint:fix": "semistandard --fix",
     "prepublish": "npm run dist",
-    "ghpages": "ghpages",
     "start": "webpack serve --host 0.0.0.0 --progress --https --port 5000",
     "test": "karma start ./tests/karma.conf.js",
     "test:firefox": "karma start ./tests/karma.conf.js --browsers Firefox",
@@ -61,7 +60,6 @@
     "chai": "^3.4.1",
     "chai-shallow-deep-equal": "^1.3.0",
     "cross-env": "4.0.0",
-    "ghpages": "0.0.10",
     "karma": "^6.3.8",
     "karma-chai-shallow-deep-equal": "0.0.4",
     "karma-chrome-launcher": "2.0.0",
@@ -100,6 +98,7 @@
     "@babel/preset-env": "^7.16.0",
     "acorn": "^8.5.0",
     "xmldom": "github:xmldom/xmldom#0.7.0",
+    "json-schema": ">=0.4.0",
     "karma-webpack": "^5.0.0",
     "three": "^0.134.0"
   }
