--- a/.drone.yml
+++ b/.drone.yml
@@ -37,6 +37,14 @@ steps:
   - name: test
     image: node:12
     commands:
+      - apt-get update \
+        && apt-get install -y wget gnupg \
+        && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+        && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
+        && apt-get update \
+        && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 \
+          --no-install-recommends \
+        && rm -rf /var/lib/apt/lists/*
       - npm run test
     when:
       branch:
