--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "webpack serve --host 0.0.0.0 --progress --https --port 5000",
     "test": "karma start --single-run --browsers ChromeHeadlessNoSandbox ./tests/karma.conf.js"
   },
-  "precommit": ["lint"],
+  "precommit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nytimes/rd-aframe-3dtiles-component.git"
@@ -75,7 +77,7 @@
     "sinon-chai": "^2.8.0",
     "snazzy": "^5.0.0",
     "superagent": "^3.8.2",
-    "three-loader-3dtiles": "^1.0.9",
+    "three-loader-3dtiles": "^1.1.3",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.5.0"
