--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "semistandard -v | snazzy",
     "lint:fix": "semistandard --fix",
     "prepublish": "npm run dist",
-    "start": "webpack serve --host 0.0.0.0 --progress --https --port 5000",
+    "start": "webpack serve --host 0.0.0.0 --progress --port 5000",
     "test": "karma start --single-run --browsers ChromeHeadlessNoSandbox ./tests/karma.conf.js"
   },
   "precommit": [
@@ -77,7 +77,7 @@
     "sinon-chai": "^2.8.0",
     "snazzy": "^5.0.0",
     "superagent": "^3.8.2",
-    "three-loader-3dtiles": "^1.1.3",
+    "three-loader-3dtiles": "^1.1.4",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.5.0"
