--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "aframe": "*",
+    "aframe": "^1.3.0",
     "babel-loader": "^8.0.5",
     "babel-preset-minify": "^0.5.0",
     "chai": "^3.4.1",
@@ -73,11 +73,11 @@
     "semistandard": "^16.0.1",
     "shelljs": "^0.7.0",
     "shx": "^0.2.2",
-    "sinon": "^1.17.5",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "snazzy": "^5.0.0",
     "superagent": "^3.8.2",
-    "three-loader-3dtiles": "^1.1.3",
+    "three-loader-3dtiles": "^1.1.10",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.5.0"
@@ -100,7 +100,7 @@
     "pre-commit": "^1.2.2",
     "puppeteer": "^13.0.0",
     "qs": ">=6.0.4",
-    "three": "^0.134.0",
+    "three": "^0.137.0",
     "trim-newlines": ">=3.0.1",
     "xmldom": "github:xmldom/xmldom#0.7.0"
   }
