--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "semistandard -v | snazzy",
     "lint:fix": "semistandard --fix",
     "prepublish": "npm run dist",
-    "start": "webpack serve --host 0.0.0.0 --progress --https --port 5000",
+    "start": "webpack serve --progress",
     "test": "karma start --single-run --browsers ChromeHeadlessNoSandbox ./tests/karma.conf.js"
   },
   "precommit": [
@@ -55,7 +55,7 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "aframe": "^1.3.0",
+    "aframe": "^1.5.0",
     "babel-loader": "^8.0.5",
     "babel-preset-minify": "^0.5.0",
     "chai": "^3.4.1",
@@ -77,7 +77,8 @@
     "sinon-chai": "^2.8.0",
     "snazzy": "^5.0.0",
     "superagent": "^3.8.2",
-    "three-loader-3dtiles": "^1.1.10",
+    "three": "^0.160.1",
+    "three-loader-3dtiles": "^1.2.1",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.5.0"
@@ -100,7 +101,7 @@
     "pre-commit": "^1.2.2",
     "puppeteer": "^13.0.0",
     "qs": ">=6.0.4",
-    "three": "^0.137.0",
+    "three": "^0.160.1",
     "trim-newlines": ">=3.0.1",
     "xmldom": "github:xmldom/xmldom#0.7.0"
   }
